# tracky

backend-xion/: Cargo.toml
backend-xion/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
frontend-xion/: auth.js  package-lock.json  package.json  tsconfig.json
frontend-xion/src/app/: layout.jsx  layout.tsx  page.jsx  page.tsx
frontend-xion/src/app/api/auth/[...nextauth]/: route.js
frontend-xion/src/app/api/challenge/: route.js
frontend-xion/src/app/api/challenge/[challenge_id]/: route.js
frontend-xion/src/app/api/user/register/: route.js
frontend-xion/src/app/challenges/: page.jsx
frontend-xion/src/components/: abstraxion_provider_wrapper.jsx  abstraxion_provider_wrapper.tsx  connect_user_wallet.jsx  connect_user_wallet.tsx
frontend-xion/src/components/challenges/: challenge-container.jsx  create-challenge.jsx  one-challenge-display.jsx
frontend-xion/src/components/custom/: FormField.jsx
frontend-xion/src/lib/: auth.js  globalProvider.jsx
frontend-xion/src/lib/api/: challenge.js  points.js
frontend-xion/src/lib/database/: connection.js
frontend-xion/src/lib/database/models/: challenge-model.js  points-model.js  user-model.js
frontend-xion/src/lib/redux/: store-provider.jsx  store.js
frontend-xion/src/lib/redux/slices/: wallet.js
